--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container-fluid">
-        <p> <a href="/">&copy; copyright 2020 </a> - Design: TemplateFlip</p>
+        <p> <a href="/">&copy; copyright 2020 </a>Made with Love</p>
       </div>
     </div>
   </footer>
