--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="wow fadeInLeft" data-wow-delay="0.3s"><a class="btn btn-white dark-grey-text font-bold ml-0"
                     href="#contact"><i class="fa fa-play mr-1"></i>
                     Hire Me</a><a class="btn btn-outline-white" target="_blank"
-                    href="./pdfs/RitikaChauhan_InternshalaResume.pdf">My Resume</a></div>
+                    href="./pdfs/Resume.pdf">My Resume</a></div>
               </div>
             </div>
           </div>
