--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
           <div class="progress-bar css" style="background-color: rgb(223, 221, 221);" data-label="CSS3"></div>
           <div class="progress-bar sass" style="background-color: rgb(223, 221, 221);" data-label="SASS"></div>
           <div class="progress-bar javascript" style="background-color: rgb(223, 221, 221);" data-label="javascript">
+          <div class="progress-bar ReactJs" style="background-color: rgb(223, 221, 221);" data-label="ReactJs">
           </div>
         </div>
         <div class="col-lg-6">
@@ -158,6 +159,7 @@
           <div class="progress-bar node" style="background-color: rgb(223, 221, 221);" data-label="Nodejs"></div>
           <div class="progress-bar sql" style="background-color: rgb(223, 221, 221);" data-label="SQL"></div>
           <div class="progress-bar bootstrap" style="background-color: rgb(223, 221, 221);" data-label="Bootstrap">
+          <div class="progress-bar ExpressJs" style="background-color: rgb(223, 221, 221);" data-label="ExpressJs">
           </div>
         </div>
       </div>
