--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@
           <div class="progress-bar html" style="background-color: rgb(223, 221, 221);" data-label="HTML5"></div>
           <div class="progress-bar css" style="background-color: rgb(223, 221, 221);" data-label="CSS3"></div>
           <div class="progress-bar sass" style="background-color: rgb(223, 221, 221);" data-label="SASS"></div>
-          <div class="progress-bar javascript" style="background-color: rgb(223, 221, 221);" data-label="javascript">
-          <div class="progress-bar react" style="background-color: rgb(223, 221, 221);" data-label="ReactJs">
-          </div>
+          <div class="progress-bar javascript" style="background-color: rgb(223, 221, 221);" data-label="javascript"></div>
+          <div class="progress-bar react" style="background-color: rgb(223, 221, 221);" data-label="ReactJs"></div>
         </div>
         <div class="col-lg-6">
           <div class="progress-bar angular" style="background-color: rgb(223, 221, 221);" data-label="Angular8"></div>
@@ -158,9 +157,8 @@
           <div class="progress-bar mongo" style="background-color: rgb(223, 221, 221);" data-label="MongoDB"></div>
           <div class="progress-bar node" style="background-color: rgb(223, 221, 221);" data-label="Nodejs"></div>
           <div class="progress-bar sql" style="background-color: rgb(223, 221, 221);" data-label="SQL"></div>
-          <div class="progress-bar bootstrap" style="background-color: rgb(223, 221, 221);" data-label="Bootstrap">
-          <div class="progress-bar express" style="background-color: rgb(223, 221, 221);" data-label="ExpressJs">
-          </div>
+          <div class="progress-bar bootstrap" style="background-color: rgb(223, 221, 221);" data-label="Bootstrap"></div>
+          <div class="progress-bar express" style="background-color: rgb(223, 221, 221);" data-label="ExpressJs"></div>
         </div>
       </div>
       <!-- </div> -->
